Second round of changes to implement a VCF hard filtering program.

--- a/build.xml
+++ b/build.xml
@@ -373,6 +373,7 @@
         <package-and-document-command title="FastqToSam"                        main-class="picard.sam.FastqToSam"/>
         <package-and-document-command title="FifoBuffer"                        main-class="picard.util.FifoBuffer"/>
         <package-and-document-command title="FilterSamReads"                    main-class="picard.sam.FilterSamReads"/>
+        <package-and-document-command title="FilterVcf"                         main-class="picard.vcf.filter.FilterVcf"/>
         <package-and-document-command title="FixMateInformation"                main-class="picard.sam.FixMateInformation"/>
         <package-and-document-command title="GatherBamFiles"                    main-class="picard.sam.GatherBamFiles"/>
         <package-and-document-command title="GenotypeConcordance"               main-class="picard.vcf.GenotypeConcordance"/>
